--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 
         </nav>
     </header>
+    <main>
+     <section id="dsmovie-card-list" class="container" >
+      <div class="dsmovie-card">
+          <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/vKA3eycouaynI2yZfU1NeSpxGqa.jpg" alt="Projeto Adam">
+          <div class="dsmovie-card-description">
+              <h3>Projeto Adam</h3>
+              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              
+          </div>
+      </div>   
+     </section>   
+    </main>
 </body>
 
 </html>
