--- a/form.html
+++ b/form.html
@@ -2,49 +2,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSMovie</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DSMovie</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav class="container">
-            <h1>DSMovie</h1>
-            <div class="dsmovie-contact-container">
-                <img src="img/github.svg" alt="Github">
-                <a href="https://github.com/WagnerSantos6">/ Wagner Santos</a>
+  <header>
+    <nav class="container">
+      <h1>DSMovie</h1>
+      <div class="dsmovie-contact-container">
+        <img src="img/github.svg" alt="Github">
+        <a href="https://github.com/WagnerSantos6">/ Wagner Santos</a>
+      </div>
+
+    </nav>
+  </header>
+  <main>
+    <section id="dsmovie-form-section">
+
+
+
+      <div class="container dsmovie-form-container">
+        <div>
+          <div class="dsmovie-card">
+            <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/vKA3eycouaynI2yZfU1NeSpxGqa.jpg"
+              alt="Projeto Adam">
+            <div class="dsmovie-form-description">
+              <h3>Projeto Adam</h3>
+
+              <form class="dsmovie-form">
+                <div class="form-group dsmovie-form-group">
+                  <label for="E-mail">Informe seu e-mail</label>
+                  <input class="form-control" type="email" id="E-mail">
+                </div>
+                <div class="form-group dsmovie-form-group">
+                  <label for="Score">Informe sua avaliação</label>
+                  <select class="form-control" name="score" id="score">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+
+                  </select>
+                </div>
+                <div class="dsmovie-form-btn-container">
+                  <button class="dsmovie-btn" type="submit">Salvar</button>
+                  <a class="dsmovie-btn" href="index.html">Cancelar</a>
+                </div>
+              </form>
+
+
             </div>
 
-        </nav>
-    </header>
-    <main>
-     <section id="dsmovie-form-section">
+          </div>
 
-
-
-    <div class="container dsmovie-form-container">
-      <div>
-        <div class="dsmovie-card">
-          <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/vKA3eycouaynI2yZfU1NeSpxGqa.jpg" alt="Projeto Adam">
-          <div class="dsmovie-card-description">
-              <h3>Projeto Adam</h3>
-              <a class="dsmovie-btn" href="index.html">Cancelar</a>
-          </div>       
-              
         </div>
 
       </div>
-      
-      </div>   
-     </section>   
-    </main>
+    </section>
+  </main>
 </body>
 
 </html>
