Polimento da Listagem

--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
               alt="Não Olhe Para Cima">
             <div class="dsmovie-card-description">
               <h3>Não Olhe Para Cima</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -74,7 +85,18 @@
               alt="Matrix Resurrections">
             <div class="dsmovie-card-description">
               <h3>Matrix Resurrections</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -86,7 +108,18 @@
               alt="Homem Aranha: Sem Volta Para Casa">
             <div class="dsmovie-card-description">
               <h3>Homem Aranha: Sem Volta Para Casa</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -98,7 +131,18 @@
               alt="Os caras malvados">
             <div class="dsmovie-card-description">
               <h3>Os Caras Malvados</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -111,7 +155,18 @@
               alt="Uncharted">
             <div class="dsmovie-card-description">
               <h3>Uncharted</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -122,7 +177,18 @@
             <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/f4SvCKIUrC2cDR7Xo4k1kaGAqQ2.jpg" alt="Sonic 2">
             <div class="dsmovie-card-description">
               <h3>Sonic 2</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -133,7 +199,18 @@
             <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/vOmw9nQtSjd5Ub7UZktDxHw24oi.jpg" alt="Halo">
             <div class="dsmovie-card-description">
               <h3>Halo</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -144,7 +221,18 @@
             <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/4j0PNHkMr5ax3IA8tjtxcmPU3QT.jpg" alt="Encanto">
             <div class="dsmovie-card-description">
               <h3>Encanto</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -156,7 +244,18 @@
               alt="Doutor Estranho">
             <div class="dsmovie-card-description">
               <h3>Doutor Estranho</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -167,7 +266,18 @@
             <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/tYj2PMSJxo7E5wOqTr7dhjHZwnk.jpg" alt="Batman">
             <div class="dsmovie-card-description">
               <h3>Batman</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
@@ -179,7 +289,18 @@
               alt="Era do Gelo">
             <div class="dsmovie-card-description">
               <h3>Era do Gelo</h3>
-              <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              <div class="dsmovie-card-description-botton">
+                <h4>3.8</h4>
+                <div>
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-full.svg" alt="star">
+                  <img src="img/star-half.svg" alt="star">
+                  <img src="img/star-empty.svg" alt="star">
+                </div>
+                <p>20 avaliações</p>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+              </div>
             </div>
 
           </div>
